--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,12 @@ CPMAddPackage(
     GIT_TAG 10.2.1
 )
 
+CPMAddPackage(
+    NAME SDL3
+    GITHUB_REPOSITORY "Y-T10/SDL"
+    GIT_TAG main
+)
+
 # システム内のパッケージを読み込む
 find_package(Threads REQUIRED)
 find_package(Boost REQUIRED)
