ライブラリのソースファイルの一覧を変更と修正

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,8 @@ add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 # ライブラリの設定
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_sources(${PROJECT_NAME} PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/SDLCpp_video.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/challenger_video.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/challenger_event.cpp
 )
 target_link_libraries(
     ${PROJECT_NAME} PUBLIC
