サンプルプログラムのビルド設定をログに残すようにした

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,5 +45,6 @@ target_link_libraries(
 
 # サンプルプログラムのビルド
 if(${BUILD_EXAMPLE})
+    message(STATUS "Build examples.")
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example)
 endif()
